[gd_scene load_steps=5 format=3 uid="uid://d2skrvmru0424"]

[ext_resource type="Script" path="res://Scenes/Menu/WinScreen/Win_screen.gd" id="1_8sw56"]

[sub_resource type="Animation" id="Animation_2ltpa"]
resource_name = "Glow"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MarginContainer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 0, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_k7le1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MarginContainer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sjmh3"]
_data = {
"Glow": SubResource("Animation_2ltpa"),
"RESET": SubResource("Animation_k7le1")
}

[node name="Win screen" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8sw56")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "End Game"

[node name="Animations" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animations"]
speed_scale = 0.62
libraries = {
"": SubResource("AnimationLibrary_sjmh3")
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer2"]
layout_mode = 2
color = Color(0.0745098, 0.160784, 0.27451, 0.827451)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 78

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 59
text = "Victory"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "This land has been purified! There is nothing here to do but pack up and find another dark structure."
horizontal_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="BackGame" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Back to Game"

[node name="BackTitle" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Back to Title Screen"

[node name="Restart" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Restart"

[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/BackGame" to="." method="_on_back_game_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/BackTitle" to="." method="_on_back_title_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
